--- a/src/components/JobDetailsForm/JobDetailsForm.css
+++ b/src/components/JobDetailsForm/JobDetailsForm.css
@@ -123,9 +123,9 @@
 .jobCategoryDrop {
   border: none !important;
   border-bottom: 1px solid #b1b0b0 !important;
-  padding: 35px 0px 0px 10px !important;
-  height: 87px !important;
-  width: 80% !important;
+  padding: 0px 0px 0px 10px !important;
+  height: 50px !important;
+  /* width: 80% !important; */
   border-radius: 0px !important;
   background-position: 100% 75% !important;
 }
