--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,6 @@ code {
   border: 1px solid #8080809e;
 }
 a {
-  color: inherit !important;
+  color: var(--bs-link-color);
   text-decoration: none !important;
 }
