--- a/src/components/ClientNavbar/ClientNav.css
+++ b/src/components/ClientNavbar/ClientNav.css
@@ -45,7 +45,7 @@
   transition: 0.2s;
 }
 
-.active {
+/* .active {
   text-decoration: none;
   font-weight: 600 !important;
   font-size: 20px !important;
@@ -58,7 +58,7 @@
 
 .activeHide {
   display: none;
-}
+} */
 
 .dropdownMenu[data-bs-popper] {
   top: 100%;
