--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -110,7 +110,7 @@
   color: #747474;
   font-size: 16px;
   font-weight: 600;
-  margin-left: 27px;
+  /* margin-left: 27px; */
 }
 .time-text {
   color: #747474;
