--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -106,11 +106,11 @@
   color: #4cb71a;
   font-size: 29px;
 }
-.job-title {
+.job-title-client {
   color: #747474;
   font-size: 16px;
   font-weight: 600;
-  /* margin-left: 27px; */
+  margin-left: 27px;
 }
 .time-text {
   color: #747474;
